cmake_minimum_required(VERSION 3.25)
project(chapter2_LinerList)

set(CMAKE_CXX_STANDARD 17)

add_executable(DynamicSequenceList DynamicSequenceList.cpp)
add_executable(LinkListTest LinkListTest.cpp)
add_executable(LinkListNoHead LinkListNoHead.cpp)
add_executable(DoubleLinkList DoubleLinkList.cpp)
add_executable(CicrleLinkLisk CicrleLinkLisk.cpp)
add_executable(CircleDLinkList CircleDLinkList.cpp)